# SEAL

./: .gitignore  README.md  pyproject.toml
cache/: organ_ids.json
conf/: config.yaml
seal/: __init__.py  omics_preprocess.py
seal/losses/: gene_loss.py
seal/models/: __init__.py  adapter.py  components.py  da_model.py  encoder_factory.py  gene_model.py  load_model.py  omiclip.py  resnet.py  transformer.py  utils.py
seal/utils/: constants.py  eval_utils.py  exp_utils.py  hest_download.py  loss_utils.py  metrics.py
tutorials/: 01 - Getting Started.ipynb
